# all-in-agent

./: .gitignore  README.md  README_zh.md  pyproject.toml
src/all_in_agent/: __init__.py
src/all_in_agent/adapters/: __init__.py  anthropic.py  base.py  openai.py
src/all_in_agent/agents/: base.py  multi.py
src/all_in_agent/core/: __init__.py  flow.py  node.py  run.py
src/all_in_agent/history/: __init__.py  manager.py  store.py
src/all_in_agent/tools/: __init__.py  builtin.py  registry.py
