[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "all-in-agent"
version = "0.1.2"
description = "A minimal, universal agent framework. Zero mandatory dependencies."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0"]
openai    = ["openai>=1.0.0"]
jsonschema = ["jsonschema>=4.0.0"]
all = ["anthropic>=0.40.0", "openai>=1.0.0", "jsonschema>=4.0.0"]

[project.urls]
Homepage   = "https://github.com/FutureUnreal/minagent"
Repository = "https://github.com/FutureUnreal/minagent"

[tool.hatch.build.targets.wheel]
packages = ["src/all_in_agent"]
